syntax = "proto3";

option csharp_namespace = "Identity.Api";

service IdentityUserProtoService {
	rpc CreateUser (SignupRequest) returns (IdentityResponse);
	rpc DeleteUser (DeleteRequest) returns (IdentityResponse);
	rpc GetUserById (UserRequest) returns (UserResponse);
	rpc GetUserByEmail (UserRequest) returns (UserResponse);
	rpc GetUsersByCompany (UserRequest) returns (CompanyUsersResponse);
	rpc RegisterUser (SignupRequest) returns (IdentityResponse);
	rpc UpdateUser (SignupRequest) returns (IdentityResponse);
	rpc CreateSafeList (SafeListRequest) returns (IdentityResponse);
	rpc UpdateSafeList (SafeListRequest) returns (IdentityResponse);
	rpc DeleteSafeList (DeleteRequest) returns (IdentityResponse);
	rpc CheckSafeList (SafeListControlRequest) returns (IdentityResponse);
	rpc GetSafeList (SafeListControlRequest) returns (SafeListCompanyResponse);
	rpc UpdateTenant (TenantUpdateRequest) returns (IdentityResponse);
}

message UserResponse {
	string id = 1;
	string companyId = 2;
	string firstName = 3;
	string lastName = 4;
	string email = 5;
	string roleid =6;
	bool authorizeEnterprise = 7;
	int32 accountType = 8;
	bool isLicenceAccount = 9;
}

message CompanyUsersResponse {
	string id = 1;
	bool isSuccess =2;
	string message = 3;
	repeated UserResponse data =4; 
}

message UserRequest {
	string companyId = 1;
	string userId = 2;
	string email = 3;
}

message DeleteRequest {
	string id =1;
	string email =2;
}

message SignupRequest {
	string userName = 1;
	string password = 2;
	string email = 3;
	string companyId = 4;
	string firtsName =5;
	string lastName =6;
	string roleid = 7;
	bool authorizeEnterprise = 8;
	bool passive = 9;
	string tenantId = 10;
	bool isLicenceAccount = 11;
	enum AccountType {		
		NONE = 0;
		ADMIN = 1;
		USER = 2;  
	}
	AccountType  accountType =12;
}

message IdentityResponse {
	string id = 1;
	bool isSuccess =2;
	string message = 3;
}

message SafeListRequest {
	string id = 1;
	string enterpriseId = 2;
	string tenantId = 3;
	string name = 4;
	string description = 5;
	string address = 6;
	int32 action = 7;
	enum ControlType {		
		IP = 0;
		MAC = 1;
		OTHER = 2;  
	}
	ControlType controlType =8;
}

message SafeListControlRequest {
	string enterpriseId = 1;
	string address = 2;
}

message SafeListCompanyResponse {
	string id = 1;
	bool isSuccess =2;
	string message = 3;
	repeated SafeListRequest data =4; 
}

message TenantUpdateRequest {
	string id  =1;
	bool UseSafeList = 2;
}